--- a/style.css
+++ b/style.css
@@ -15,6 +15,29 @@ body{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
+
+.scrollbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 15px;
+    height: 0;
+    opacity: 0;
+    background: linear-gradient(to top, #e4e0e0, #686869);
+}
+.clickScrollbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 15px;
+    height: 100%;
+    background: rgba(170,170,170,0.356);
+}
+
 /* Navbar */
 
 
@@ -50,7 +73,16 @@ header{
     list-style-type: none;
     margin-top: auto;
     margin-bottom: auto;
-}   
+}  
+
+#navUl li{
+    transition: 0.5s;
+}
+
+#navUl li:hover{
+    transform: scale(1.5);
+    transition: 0.5s;
+}
 
 li{
     margin-left: 9%;
@@ -119,6 +151,12 @@ li a{
     width: 64px;
     margin-top: 5%;
     margin-left:27%;
+    transition: 0.5s;
+}
+
+#pBanniere img:hover{
+    transform: scale(2);
+    transition: 0.5s;
 }
 
 /* CITATION */
@@ -153,6 +191,11 @@ li a{
 }
 
 /* MODALS JS */
+
+#borderDiff{
+    border: 5px solid black;
+}
+
 .modalJS {
     display: none; 
     position: fixed; 
@@ -437,7 +480,12 @@ button h5{
     width: 300px;
     height: 100px;
     border-radius: 5px;
-    
+    transition: 0.5s;
+}
+
+.contact:hover{
+    transform: scale(1.5);
+    transition: 0.8s;
 }
 
 .contact h5{
@@ -468,6 +516,12 @@ button h5{
 }
 
 #anchor{
-    margin-top: 10px;
+    /* margin-top: 10px; */
     width: 32px;
+    transition: 0.5s;
+}
+
+#anchor:hover{
+    width: 70px;
+    transition: 0.5s;
 }
